# CMakePublic

./: .gitignore  CMakeLists.txt  README.md  cmake_public.cpp  cmake_public.hpp
.github/workflows/: build-pipeline.yml
_builds/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
include/: cmake_public.hpp
lib/: CMakePublicConfig-noconfig.cmake  CMakePublicConfig.cmake
